Fix bug with sort order in links
* Regression 'asc' should be default for sort links of other fields
* Regression in sortTableHeader fixed: 'asc'/'desc' class
  should be applied to <a>
* Refactoring and cleaning-up of unnecessary code

--- a/src/templates/partials/_sortTableHeader.hbs
+++ b/src/templates/partials/_sortTableHeader.hbs
@@ -1,7 +1,7 @@
 {{#with (lookup sortInfo attr)}}
-  <th data-sort="{{attr}}" class="sorting-control {{viewId}} {{order}}">
+  <th data-sort="{{attr}}" class="sorting-control {{viewId}}">
     {{#if routeName}}
-      <a href="{{url routeName routeParams nextState}}">
+      <a href="{{url routeName routeParams nextState}}" class="{{order}}">
         <span>{{text}}</span><span class="indicator"></span>
       </a>
     {{else}}
