Add infinite pagination style and mechnisms

--- a/src/templates/partials/_pagination.hbs
+++ b/src/templates/partials/_pagination.hbs
@@ -4,7 +4,7 @@
        class="prev-page {{#unless multiPaged}}hidden{{else}}{{#unless prev}}disabled-arrow{{/unless}}{{/unless}}">
       {{icon 'thin-arrow' 'rotate-left'}}
     </a>
-    <strong>{{range}} of {{count}}</strong>
+    <strong>{{range}}</strong>
     <a href="{{url routeName routeParams nextState}}"
        class="next-page {{#unless multiPaged}}hidden{{else}}{{#unless next}}disabled-arrow{{/unless}}{{/unless}}">
       {{icon 'thin-arrow' 'rotate-right'}}
