Modal views clean-up
Remove obsolete forcing of one instance
Handle cases of modal view disposal while BS animation in progress
Relying on show/shown/hide/hidden BS modal events for managing view state.
Improve modal views unit tests with edge cases of BS animation

--- a/src/templates/progress-dialog.hbs
+++ b/src/templates/progress-dialog.hbs
@@ -29,8 +29,7 @@
 {{/inline}}
 
 {{#*inline "modal-content"}}
-  {{!-- Do not apply fade if it's a current state to enable initial BS modal animations --}}
-  <div class="modal-content {{current}}-view{{#unlessEqual state current}} fade{{/unlessEqual}}">
+  <div class="modal-content {{current}}-view fade{{#ifequal state current}} in{{/ifequal}}">
     {{> @partial-block }}
   </div>
 {{/inline}}
