Use CSS Animations for CollectionView
Usiung default Bootstrap Fade In classes

--- a/test/templates/paginated-table-test.hbs
+++ b/test/templates/paginated-table-test.hbs
@@ -1,6 +1,6 @@
 <div class="table-responsive">
   {{> pagination pageInfo}}
-  <table class="devices-table table table-striped table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr class="headings">
         {{> sortTableHeader attr='attrA' sortInfo=sortInfo}}
