--- a/test/templates/table-test.hbs
+++ b/test/templates/table-test.hbs
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-  <table class="devices-table table table-striped table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr class="headings">
         {{> sortTableHeader attr='attrA' sortInfo=sortInfo}}
