Use new format for icons
Instead of postfix "-font" using prefix "icon-" inside icon helper
Add support for multiple class names passed into first param of icon helper
Some default icon names updated

--- a/src/templates/partials/_pagination.hbs
+++ b/src/templates/partials/_pagination.hbs
@@ -2,12 +2,12 @@
   {{#if count}}{{#if routeName}}
     <a href="{{url routeName routeParams prevState}}"
        class="prev-page {{#unless multiPaged}}hidden{{else}}{{#unless prev}}disabled-arrow{{/unless}}{{/unless}}">
-      {{icon 'thin-arrow' 'rotate-left'}}
+      {{icon 'atlas-arrow-thin-up' 'rotate-left'}}
     </a>
     <strong>{{range}}</strong>
     <a href="{{url routeName routeParams nextState}}"
        class="next-page {{#unless multiPaged}}hidden{{else}}{{#unless next}}disabled-arrow{{/unless}}{{/unless}}">
-      {{icon 'thin-arrow' 'rotate-right'}}
+      {{icon 'atlas-arrow-thin-up' 'rotate-right'}}
     </a>
   {{/if}}{{/if}}
 </div>
