Support custom class for sortable table headers
Adding “class” attribute to hbs partial template.

--- a/test/templates/sorting-test.hbs
+++ b/test/templates/sorting-test.hbs
@@ -3,7 +3,7 @@
     <tr class="headings">
       {{> sortTableHeader attr='attr_a' sortInfo=sortInfo}}
       <th><span>Unsortable Attribute</span></th>
-      {{> sortTableHeader attr='attr_b' sortInfo=sortInfo}}
+      {{> sortTableHeader attr='attr_b' sortInfo=sortInfo class="foo"}}
     </tr>
   </thead>
   <tbody>
