--- a/src/templates/partials/_sortTableHeader.hbs
+++ b/src/templates/partials/_sortTableHeader.hbs
@@ -1,5 +1,5 @@
 {{#with (lookup sortInfo attr)}}
-  <th data-sort="{{attr}}" class="sorting-control {{viewId}}">
+  <th data-sort="{{attr}}" class="sorting-control {{../class}} {{viewId}}">
     <a href="{{url routeName routeParams nextState}}" class="{{order}}">
       <span>{{text}}</span><span class="indicator"></span>
     </a>
