Refactor StatefulUrlParams into Queryable
Bettter naming for simply concept.
Instead of ambigious “state” now using “query”.
Renaming getState(), setState() into getQuery() and setQuery().
This better describes that the hash object will be converted to sync url query params.
Add new method fetchWithQuery() that covers common use case:
  where we don’t want to fetch if query hasn’t been changed on subsequent
  fetching.

--- a/src/templates/partials/_pagination.hbs
+++ b/src/templates/partials/_pagination.hbs
@@ -1,11 +1,11 @@
 <div class="pagination-controls {{viewId}}">
   {{#if count}}
-    <a href="{{url routeName routeParams prevState}}"
+    <a href="{{url routeName routeParams prevQuery}}"
        class="prev-page {{#unless multiPaged}}hidden{{else}}{{#unless prev}}disabled-arrow{{/unless}}{{/unless}}">
       {{icon 'atlas-arrow-thin-up' 'rotate-left'}}
     </a>
     <strong>{{range}}</strong>
-    <a href="{{url routeName routeParams nextState}}"
+    <a href="{{url routeName routeParams nextQuery}}"
        class="next-page {{#unless multiPaged}}hidden{{else}}{{#unless next}}disabled-arrow{{/unless}}{{/unless}}">
       {{icon 'atlas-arrow-thin-up' 'rotate-right'}}
     </a>
