--- a/src/templates/progress-dialog.hbs
+++ b/src/templates/progress-dialog.hbs
@@ -1,7 +1,7 @@
 {{#*inline "header"}}
   {{#if title}}
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="close close-button" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
       <h4 class="modal-title">{{title}}</h4>
