Update Dialogs Code
* Rename ProgressDialogView css state classes into less ambiguous names
* Trigger dialog view ‘shown’ ‘hidden’ events for related bs events
* Never dispose modal on hiding, this should be done by a host parent view

--- a/src/templates/progress-dialog.hbs
+++ b/src/templates/progress-dialog.hbs
@@ -29,7 +29,7 @@
 {{/inline}}
 
 {{#*inline "modal-content"}}
-  <div class="modal-content {{current}}-view fade{{#ifequal state current}} in{{/ifequal}}">
+  <div class="modal-content {{current}}-state-view fade{{#ifequal state current}} in{{/ifequal}}">
     {{> @partial-block }}
   </div>
 {{/inline}}
