Add a class for notification message

--- a/src/templates/notification.hbs
+++ b/src/templates/notification.hbs
@@ -1,2 +1,2 @@
 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-{{~message~}}
+<span class="notification-message">{{message}}</span>
