Extend FilterInputView features
* Add few new mixins
  - FilterGrouped, helps maintaine deepSync state for filterGroups
  - Filtering, helps init FilterInputView and pass filter from/to Queryable collection
* Update FilterSelection base class, support of missing and leaf groups
* Update FilterInputView layout, icon, remove-all button, add new features:
  - Highlight of search text in every dropdown item
  - Support of singular filters (only one selected value allowed)
  - Support of leaf groups (no children, for example “Search” filter actions)
* Add utils.compress function that helps dealing with single element arrays

--- a/src/templates/filter-input/item.hbs
+++ b/src/templates/filter-input/item.hbs
@@ -1,4 +1,6 @@
 <span class="selected-item">
   <span class="item-group">{{groupName}}</span>&nbsp;<span class="item-name">{{name}}</span>
-  <button type="button" class="close remove-button">&times;</button>
+  <button type="button" class="btn btn-link remove-button">
+    {{icon 'misc-x'}}
+  </button>
 </span>
