--- a/src/templates/filter-input/list-item.hbs
+++ b/src/templates/filter-input/list-item.hbs
@@ -1,6 +1,9 @@
 <li>
   <a href="#">
-    <div class="item-name">{{name}}</div>
+    <div>
+      <span class="item-name">{{name}}</span>
+      <span class="item-note"></span>
+    </div>
     <div class="sub-text item-description">{{description}}</div>
   </a>
 </li>
