Add few improvements to FilterInputView
* Support of `required` items, they can’t be removed through UI actions
* Disable “Search” (leaf) item by default if there is no search query set
* Pass `filterGroups` to `FilterSelection.toObject`
  - This helps to build extended custom rules around filter serialization
* Fix bug when selection state corrupted after adding two filters with
the same id but from different groups.

--- a/src/templates/filter-input/item.hbs
+++ b/src/templates/filter-input/item.hbs
@@ -1,6 +1,8 @@
 <span class="selected-item">
   <span class="item-group">{{groupName}}</span>&nbsp;<span class="item-name">{{name}}</span>
-  <button type="button" class="btn btn-link remove-button">
-    {{icon 'misc-x'}}
-  </button>
+  {{#unless required}}
+    <button type="button" class="btn btn-link remove-button">
+      {{icon 'misc-x'}}
+    </button>
+  {{/unless}}
 </span>
