Add nother portion of FilterInput improvements
* Restore the idea of `.item-note` el for showing search query
* Keep input focused after each interaction with dropdowns (either mouse or keyboard)
  - Remove the logic of re-opening dropdowns, assuming it not always needed

--- a/src/templates/filter-input/list-item.hbs
+++ b/src/templates/filter-input/list-item.hbs
@@ -1,5 +1,10 @@
 <a href="#">
-  <div class="item-name">{{name}}</div>
+  <div>
+    <span class="item-name">{{name}}</span>
+    {{#if note}}
+      <span class="item-note">{{note}}</span>
+    {{/if}}
+  </div>
   {{#if description}}
     <div class="sub-text item-description">{{description}}</div>
   {{/if}}
