Use new x icon for notification close (#41)

--- a/templates/notification.hbs
+++ b/templates/notification.hbs
@@ -1,2 +1,4 @@
-<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 <span class="notification-message">{{message}}</span>
+<button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+  {{icon 'misc-x'}}
+</button>
