--- a/templates/partials/sort-table-header.hbs
+++ b/templates/partials/sort-table-header.hbs
@@ -1,7 +1,7 @@
 {{#with (lookup sortInfo attr)}}
   <th data-sort="{{attr}}" class="sorting-control {{../class}} {{viewId}}">
     <a href="{{url routeName routeParams nextQuery}}" class="{{order}}">
-      <span>{{text}}</span><span class="indicator"></span>
+      <span class="sorting-header">{{text}}</span><span class="indicator"></span>
     </a>
   </th>
 {{/with}}
