Add proper autofocus to all modal views
* Bootstrap framework claims that `autofocus` attr doesn’t work in modals
(https://getbootstrap.com/docs/3.3/javascript/#modals). Use custom code
to autofocus element with the attr on modal shown event.
* If modal view doesn’t have elements to autofocus, set focus to a first button
from the footer. It is very helpful for all dialogs.
* Update ProgressDialogView to apply autofocus logic after each state change.

--- a/views/base/modal.spec.hbs
+++ b/views/base/modal.spec.hbs
@@ -1,5 +1,9 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <p>I am a modal</p>
+    <input autofocus class="test-focus" />
   </div>
+  <div class="modal-footer">
+    <button class="submit-button" />
+  </div
 </div>
