Change progress-pulse partial markup

--- a/templates/partials/progress-pulse.hbs
+++ b/templates/partials/progress-pulse.hbs
@@ -1,8 +1,9 @@
 <div class="progress-pulse {{class}}">
-  <div class="overlay"></div>
-  <div class="animation">
-    <span class="circle"></span>
-    <span class="circle"></span>
-    <span class="circle"></span>
+  <div class="overlay">
+    <div class="animation">
+      <span class="circle"></span>
+      <span class="circle"></span>
+      <span class="circle"></span>
+    </div>
   </div>
 </div>
