Add CANCEL button in the footer of Modals

--- a/views/dialog.hbs
+++ b/views/dialog.hbs
@@ -15,6 +15,7 @@
           {{~text~}}
         </button>
       {{/each}}
+      <button type="button" class="btn btn-link" data-dismiss="modal">{{cancelBtnLabel}}</button>
     </div>
   </div>
 </div>
